--- a/index (3).html
+++ b/index (3).html
@@ -29,7 +29,7 @@
       border-bottom: 1px solid #ddd;
       padding: 10px 0;
       display: flex;
-      flex-direction:row;
+      flex-direction:column;
     }
     .post h2 {
       color: #401;
